--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,37 @@
     margin-left: 20% !important;
     width: 10px !important;
     height: 10px !important;
+    display: none;
 }
 .swiper-button-prev{
     width: 10px !important;
     height: 10px !important;
+    display: none;
 }
 .main{
     background-image: url('./assets/imgs//nashi.png');
     background-size: cover;
     background-position: center;
+  
 
+}
+@media(max-width:400px){
+    .swiper-button-next{
+        margin-left: 20% !important;
+        width: 10px !important;
+        height: 10px !important;
+        display: none;
+    }
+    .swiper-button-prev{
+        width: 10px !important;
+        height: 10px !important;
+        display: none;
+    }
+}
+
+.kor{
+    background-image: url('./assets//imgs//kor.png');
+    background-size: cover;
+    background-position: center;
+    background-color: #2E4D3F;
 }
